# Best-Practice-MHPC

./: .gitignore  CMakeLists.txt  README.md  enrico_lap_cmake.txt  job.sh  submit_jobs.x  weblinks.txt
code/: Readme.md
code/serial/: Makefile  model.f90  module_output.F90  module_parameters.f90  module_physics.f90  module_types.F90
data/: comparisons.txt  hybMPIACC.py  hybridMPIOMP.py  nccmp3.py
data/benchmarks/MPI+OMP/: performance.gp  time.txt  time1.txt
data/benchmarks/openMP_1node/400x_200z/: slurm_1n_1r_16th.out  slurm_1n_1r_1th.out  slurm_1n_1r_2th.out  slurm_1n_1r_32th.out  slurm_1n_1r_4th.out  slurm_1n_1r_8th.out
logs/: serial_27341466.out
man/: doxy.in  doxygen.in  projectdoxygen.css
pdfs/: available_ictp_library.md
source/: Readme.md  model.F90  model.f90  module_output  module_output.F90  module_parameters.f90  module_physics.f90  module_physics_cuda.f90  module_types.F90  module_types_cuda.F90
